@@ -4,6 +4,7 @@ Version 0.11:
 	* More useful information on verify
 	* Add a handicaps program for creating handicap tables
 	* Update ECATS format for EBU pay-to-play
+   * Add support for USEBIO format for EBU pay-to-play
 
 Version 0.10:
 	
